concord_macros/tests/dsl/fail/fail_base_query.stderr
error: base URL must contain only scheme and host
 --> tests/dsl/fail/fail_base_query.rs:6:14
  |
6 |         base "https://example.com?api_key=value"
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_base_query.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
